--- a/projet/Views/Home/Index.cshtml
+++ b/projet/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
                     </div>
                     <div class="col-lg-6 col-sm-6 col-8 header-top-right">
                         <a href='@Url.Action("Index", "Admins")' class="text-uppercase">Administration</a>
-                        <a href='@Url.Action("Index", "Enseignants")' class="text-uppercase">Enseignants</a>
+                        <a href='@Url.Action("Index1", "Modules")' class="text-uppercase">Enseignants</a>
                     </div>
                 </div>
             </div>
