--- a/projet/Views/Modules/Index1.cshtml
+++ b/projet/Views/Modules/Index1.cshtml
@@ -10,7 +10,7 @@
 <center>
     <center>
         <br /><br /><br /><br />
-        <h2>   Liste des chapitres  </h2>
+        <h2>   Liste des Modules  </h2>
         <br />  <br />
         <button class="btn btn-success" style="margin-bottom:10px"><i class="fa fa-plus"></i>@Html.ActionLink("Add Module", "Add", "Modules")</button>
         <button class="btn btn-success" style="margin-bottom:10px"><i class="fa fa-calendar"></i>@Html.ActionLink("Calendrier", "Calendrier", "Etudiant")</button>
