--- a/projet/Views/Shared/_LayoutEnseignant.cshtml
+++ b/projet/Views/Shared/_LayoutEnseignant.cshtml
@@ -51,7 +51,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="@Url.Action("Index1", "Module")">
+                <a class="nav-link" href="@Url.Action("Index1", "Modules")">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Page Home</span>
                 </a>
@@ -64,7 +64,7 @@
             <hr class="sidebar-divider">
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="@Url.Action("Index1", "Module")">
+                <a class="nav-link" href="@Url.Action("Index1", "Modules")">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Liste des Modules</span>
                 </a>
