--- a/projet/Views/Home/LoginEnseignant.cshtml
+++ b/projet/Views/Home/LoginEnseignant.cshtml
@@ -37,10 +37,10 @@
                                 <span class="text">+953012 3654 896</span>
                             </span>
                         </a>
-                        <a href="mailto:support@colorlib.com">
+                        <a href="http://www.ensas.uca.ma/">
                             <span class="lnr lnr-envelope"></span>
                             <span class="text">
-                                <span class="text">support@colorlib.com</span>
+                                <span class="text">Ensas</span>
                             </span>
                         </a>
                     </div>
@@ -52,49 +52,43 @@
             </div>
         </div>
 
-
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <a class="navbar-brand logo_h" href='@Url.Action("Index", "Home")'><img src="~/img/logo.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav menu_nav ml-auto">
-                        <li class="nav-item active"><div class="nav-link">@Html.ActionLink("Home", "Index", "Home")</div></li>
-                        <li class="nav-item"><div class="nav-link">@Html.ActionLink("About", "About", "Home")</div></li>
-                        <li class="nav-item submenu dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                               aria-expanded="false">Pages</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item"><div class="nav-link">@Html.ActionLink("Courses", "Courses", "Home")</div></li>
-                                <li class="nav-item"><div class="nav-link">@Html.ActionLink("Course Details", "CoursesDetail", "Home")</div></li>
-                                <li class="nav-item"><div class="nav-link">@Html.ActionLink("Elements", "Elements", "Home")</div></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item submenu dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                               aria-expanded="false">Blog</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item"><div class="nav-link">@Html.ActionLink("Blog", "Blog", "Home")</div></li>
-                                <li class="nav-item"><div class="nav-link">@Html.ActionLink("Blog Details", "BlogDetail", "Home")</div></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item"><div class="nav-link">@Html.ActionLink("Contact", "Contact", "Home")</div></li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link search" id="search">
-                                <i class="lnr lnr-magnifier"></i>
-                            </a>
-                        </li>
-                    </ul>
+        <div class="main_menu">
+            <div class="search_input" id="search_input_box">
+                <div class="container">
+                    <form class="d-flex justify-content-between" asp-action="Courses" method="post">
+                        <input type="text" class="form-control" id="searchString" name="searchString" placeholder="Search Here">
+                        <button type="submit" class="btn"></button>
+                        <span class="lnr lnr-cross" id="close_search" title="Close Search"></span>
+                    </form>
                 </div>
             </div>
-        </nav>
+
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <a class="navbar-brand logo_h" href='@Url.Action("Index", "Home")'><img src="~/img/logo.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav menu_nav ml-auto">
+                            <li class="nav-item active"><div class="nav-link">@Html.ActionLink("Home", "Index", "Home")</div></li>
+                            <li class="nav-item"><div class="nav-link">@Html.ActionLink("About", "About", "Home")</div></li>
+                            <li class="nav-item"><div class="nav-link">@Html.ActionLink("Courses", "Courses", "Home")</div>
+                            <li class="nav-item"><div class="nav-link">@Html.ActionLink("Contact", "Contact", "Home")</div></li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link search" id="search">
+                                    <i class="lnr lnr-magnifier"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </div>
     </header>
     <div class="limiter">
