--- a/projet/Views/Home/courses.cshtml
+++ b/projet/Views/Home/courses.cshtml
@@ -142,7 +142,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="main_title">
-                        <h2 style="text-align:center;color:deepskyblue"><i class="fa fa-book"></i> les cours disponibles seront affichées ici</h2>
+                        <h2 style="text-align:center;color:deepskyblue"><i class="fa fa-book"></i> les cours disponibles seront affichées ici après le choix d'un niveau et d'une filière</h2>
                         <p>@ViewBag.Found</p>
                     </div>
                 </div>
