--- a/projet/Views/Shared/_LayoutAdmin.cshtml
+++ b/projet/Views/Shared/_LayoutAdmin.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -37,194 +36,10 @@
             <!--logo start-->
             <a href="index.html" class="logo"><b>learn<span>easy</span></b></a>
             <!--logo end-->
-            <div class="nav notify-row" id="top_menu">
-                <!--  notification start -->
-                <ul class="nav top-menu">
-                    <!-- settings start -->
-                    <li class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <i class="fa fa-tasks"></i>
-                            <span class="badge bg-theme">4</span>
-                        </a>
-                        <ul class="dropdown-menu extended tasks-bar">
-                            <div class="notify-arrow notify-arrow-green"></div>
-                            <li>
-                                <p class="green">You have 4 pending tasks</p>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <div class="task-info">
-                                        <div class="desc">Dashio Admin Panel</div>
-                                        <div class="percent">40%</div>
-                                    </div>
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                                            <span class="sr-only">40% Complete (success)</span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <div class="task-info">
-                                        <div class="desc">Database Update</div>
-                                        <div class="percent">60%</div>
-                                    </div>
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                                            <span class="sr-only">60% Complete (warning)</span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <div class="task-info">
-                                        <div class="desc">Product Development</div>
-                                        <div class="percent">80%</div>
-                                    </div>
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                                            <span class="sr-only">80% Complete</span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <div class="task-info">
-                                        <div class="desc">Payments Sent</div>
-                                        <div class="percent">70%</div>
-                                    </div>
-                                    <div class="progress progress-striped">
-                                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-                                            <span class="sr-only">70% Complete (Important)</span>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="external">
-                                <a href="#">See All Tasks</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- settings end -->
-                    <!-- inbox dropdown start-->
-                    <li id="header_inbox_bar" class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-                            <i class="fa fa-envelope-o"></i>
-                            <span class="badge bg-theme">5</span>
-                        </a>
-                        <ul class="dropdown-menu extended inbox">
-                            <div class="notify-arrow notify-arrow-green"></div>
-                            <li>
-                                <p class="green">You have 5 new messages</p>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="photo"><img alt="avatar" src="img/ui-zac.jpg"></span>
-                                    <span class="subject">
-                                        <span class="from">Zac Snider</span>
-                                        <span class="time">Just now</span>
-                                    </span>
-                                    <span class="message">
-                                        Hi mate, how is everything?
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="photo"><img alt="avatar" src="~images/ui-divya.jpg"></span>
-                                    <span class="subject">
-                                        <span class="from">Divya Manian</span>
-                                        <span class="time">40 mins.</span>
-                                    </span>
-                                    <span class="message">
-                                        Hi, I need your help with this.
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="photo"><img alt="avatar" src="~images/ui-danro.jpg"></span>
-                                    <span class="subject">
-                                        <span class="from">Dan Rogers</span>
-                                        <span class="time">2 hrs.</span>
-                                    </span>
-                                    <span class="message">
-                                        Love your new Dashboard.
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="photo"><img alt="avatar" src="~images/ui-sherman.jpg"></span>
-                                    <span class="subject">
-                                        <span class="from">Dj Sherman</span>
-                                        <span class="time">4 hrs.</span>
-                                    </span>
-                                    <span class="message">
-                                        Please, answer asap.
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">See all messages</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- inbox dropdown end -->
-                    <!-- notification dropdown start-->
-                    <li id="header_notification_bar" class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
-                            <i class="fa fa-bell-o"></i>
-                            <span class="badge bg-warning">7</span>
-                        </a>
-                        <ul class="dropdown-menu extended notification">
-                            <div class="notify-arrow notify-arrow-yellow"></div>
-                            <li>
-                                <p class="yellow">You have 7 new notifications</p>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                    Server Overloaded.
-                                    <span class="small italic">4 mins.</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="label label-warning"><i class="fa fa-bell"></i></span>
-                                    Memory #2 Not Responding.
-                                    <span class="small italic">30 mins.</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="label label-danger"><i class="fa fa-bolt"></i></span>
-                                    Disk Space Reached 85%.
-                                    <span class="small italic">2 hrs.</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">
-                                    <span class="label label-success"><i class="fa fa-plus"></i></span>
-                                    New User Registered.
-                                    <span class="small italic">3 hrs.</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="index.html#">See all notifications</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <!-- notification dropdown end -->
-                </ul>
-                <!--  notification end -->
-            </div>
+
             <div class="top-menu">
                 <ul class="nav pull-right top-menu">
-                    <li><a class="logout" href="login.html">Logout</a></li>
+                    <li><a class="logout" asp-area="" asp-controller="Admins" asp-action="logout">Logout</a></li>
                 </ul>
             </div>
         </header>
@@ -238,7 +53,7 @@
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu" id="nav-accordion">
                     <p class="centered"><a href="profile.html"><img src="~/images/ui-sam.jpg" class="img-circle" width="80"></a></p>
-                    <h5 class="centered">Sam Soffes</h5>
+                    <h5 class="centered">Administrateur</h5>
                     <li class="mt">
                         <a class="active" asp-controller="Admins" asp-action="Index">
                             <i class="fa fa-dashboard"></i>
@@ -254,8 +69,24 @@
                             <li> <a asp-area="" asp-controller="Admins" asp-action="ImportExcelAddEns">Import Excel file</a></li>
                             <li><a asp-area="" asp-controller="Admins" asp-action="CreateEnsFormulaire">Add teachers</a></li>
                             <li><a asp-area="" asp-controller="Admins" asp-action="TudoEns">Modify / Delete a teacher</a></li>
+
                         </ul>
                     </li>
+
+                    <li class="sub-menu">
+                        <a href="javascript:;">
+                            <i class="fa fa-edit"></i>
+                            <span>Filiere registration</span>
+                        </a>
+                        <ul class="sub">
+                            <li> <a asp-area="" asp-controller="Admins" asp-action="Addfiliere">Add Filière</a></li>
+                            <li><a asp-area="" asp-controller="Admins" asp-action="Createniv">Add niveaux</a></li>
+                            <li><a asp-area="" asp-controller="Admins" asp-action="Listf">Modify / Delete filière</a></li>
+                            <li><a asp-area="" asp-controller="Admins" asp-action="Listniv">Modify / Delete Niveau</a></li>
+
+                        </ul>
+                    </li>
+
                     <li class="sub-menu">
                         <a href="javascript:;">
                             <i class="fa fa-edit"></i>
@@ -267,8 +98,9 @@
                             <li><a asp-area="" asp-controller="Modules1" asp-action="TudoEns">Modify / Delete a Module</a></li>
                         </ul>
                     </li>
+
+
                 </ul>
-           
                 <!-- sidebar menu end-->
             </div>
         </aside>
@@ -277,11 +109,11 @@
         <!--footer start-->
         <footer class="site-footer">
             <div class="text-center">
-              
+
                 <div class="credits">
-                  Learn Easy  Enasas 2020
+                    Learn Easy  Enasas 2020
                 </div>
-              
+
             </div>
         </footer>
         <!--footer end-->
@@ -317,11 +149,10 @@
                 // (string | optional) the class name you want to apply to that specific message
                 class_name: 'my-sticky-class'
             });
-
             return false;
         });
     </script>
-   
+
 </body>
 
 </html>
