--- a/projet/Views/Shared/_LayoutAdmin.cshtml
+++ b/projet/Views/Shared/_LayoutAdmin.cshtml
@@ -26,8 +26,8 @@
 <body>
     <section id="container">
         <!-- **********************************************************************************************************************************************************
-            TOP BAR CONTENT & NOTIFICATIONS
-            *********************************************************************************************************************************************************** -->
+        TOP BAR CONTENT & NOTIFICATIONS
+        *********************************************************************************************************************************************************** -->
         <!--header start-->
         <header class="header black-bg">
             <div class="sidebar-toggle-box">
@@ -45,8 +45,8 @@
         </header>
         <!--header end-->
         <!-- **********************************************************************************************************************************************************
-            MAIN SIDEBAR MENU
-            *********************************************************************************************************************************************************** -->
+        MAIN SIDEBAR MENU
+        *********************************************************************************************************************************************************** -->
         <!--sidebar start-->
         <aside>
             <div id="sidebar" class="nav-collapse ">
@@ -82,7 +82,7 @@
                             <li> <a asp-area="" asp-controller="Admins" asp-action="Addfiliere">Add Filière</a></li>
                             <li><a asp-area="" asp-controller="Admins" asp-action="Createniv">Add niveaux</a></li>
                             <li><a asp-area="" asp-controller="Admins" asp-action="Listf">Modify / Delete filière</a></li>
-                            <li><a asp-area="" asp-controller="Admins" asp-action="Listniv">Modify / Delete Niveau</a></li>
+
 
                         </ul>
                     </li>
@@ -106,18 +106,20 @@
         </aside>
         @RenderBody()
         <!--main content end-->
+
+    </section>
         <!--footer start-->
         <footer class="site-footer">
             <div class="text-center">
 
                 <div class="credits">
-                    Learn Easy  Enasas 2020
+                    Learn Easy  Ensasas 2020
                 </div>
 
             </div>
         </footer>
         <!--footer end-->
-    </section>
+  
     <!-- js placed at the end of the document so the pages load faster -->
     <script src="~/lib/jquery/jquery.min.js"></script>
 
