--- a/projet/Views/Shared/_LayoutAdmin.cshtml
+++ b/projet/Views/Shared/_LayoutAdmin.cshtml
@@ -224,7 +224,7 @@
             </div>
             <div class="top-menu">
                 <ul class="nav pull-right top-menu">
-                    <li><a class="logout" href="login.html">Logout</a></li>
+                    <li><a class="logout" href="@Url.Action("Logout", "Admins")">Logout</a></li>
                 </ul>
             </div>
         </header>
