--- a/projet/Views/Shared/_LayoutAdmin.cshtml
+++ b/projet/Views/Shared/_LayoutAdmin.cshtml
@@ -82,6 +82,7 @@
                             <li> <a asp-area="" asp-controller="Admins" asp-action="Addfiliere">Add Filière</a></li>
                             <li><a asp-area="" asp-controller="Admins" asp-action="Createniv">Add niveaux</a></li>
                             <li><a asp-area="" asp-controller="Admins" asp-action="Listf">Modify / Delete filière</a></li>
+                            <li><a asp-area="" asp-controller="Admins" asp-action="Listniv">Modify / Delete niveau</a></li>
 
 
                         </ul>
@@ -97,6 +98,15 @@
                             <li><a asp-area="" asp-controller="Modules1" asp-action="CreateModule">Add Modules</a></li>
                             <li><a asp-area="" asp-controller="Modules1" asp-action="TudoEns">Modify / Delete a Module</a></li>
                         </ul>
+                    </li>
+
+
+                    <li class="sub-menu">
+                        <a asp-area="" asp-controller="Admins" asp-action="updateadmin">
+                            <i class="fa fa-edit"></i>
+                            <span>update Admin's parameters</span>
+                        </a>
+
                     </li>
 
 
