dernier commit with manal ait dik

--- a/projet/Views/Admins/Listf.cshtml
+++ b/projet/Views/Admins/Listf.cshtml
@@ -38,7 +38,7 @@
                             <thead>
                                 <tr>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.nom_fil)
+                                       Nom de filiere
                                     </th>
 
                                     <th></th>
