--- a/projet/Views/Admins/Listniv.cshtml
+++ b/projet/Views/Admins/Listniv.cshtml
@@ -56,7 +56,7 @@
                             <thead>
                                 <tr>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.nom_niv)
+                                       Le niveau
                                     </th>
 
                                 </tr>
