--- a/projet/Views/Modules/Index1.cshtml
+++ b/projet/Views/Modules/Index1.cshtml
@@ -56,7 +56,7 @@
                     <td>
                         <button class="btn btn-warning" style="margin-left:5px"><i class="fas fa-info-circle"></i> @Html.ActionLink("Details", "Details", new { id = item.id_mod }) </button>
 
-                        <button class="btn btn-warning" style="margin-left:5px"><i class="fas fa-plus"></i> @Html.ActionLink("Ajouter un chapitre", "Create", "chapitres", new { id = item.id_mod }) </button>
+                        <button class="btn btn-warning" style="margin-left:5px"><i class="fas fa-plus"></i> @Html.ActionLink("Ajouter un chapitre", "Create", "chapitres1", new { id = item.id_mod }) </button>
 
                     </td>
                 </tr>
