--- a/projet/Views/Modules1/ImportExcelAddEns.cshtml
+++ b/projet/Views/Modules1/ImportExcelAddEns.cshtml
@@ -158,8 +158,8 @@
             <br />
             <br />
             <br />
-            <div class="box">
-                <div>
+            <div class="box"  style="margin-left:110px">
+                <div >
                     <select id="fil" name="listfil" asp-items='@(new SelectList(ViewBag.filiere,"id_fil","nom_fil"))'>
                         <option> select filiere </option>
                     </select>
@@ -180,7 +180,7 @@
 
 </div>
             <div>
-                <div class="box">
+                <div class="box"  style="margin-left:110px">
 
                     <select asp-for="id_niv" id="id_niv" asp-items="ViewBag.id_niv">
                         <option> select niveau </option>
