--- a/projet/Views/Home/Index.cshtml
+++ b/projet/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<
+
 <!doctype html>
 <html lang="en">
 
@@ -34,9 +34,11 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-sm-6 col-4 header-top-left">
-                        <a href="tel:+9530123654896">
-                            <span class="lnr lnr-phone"></span>
+                        <span class="text-white    "  style="margin-right:50px;">LEARNEASY</span>
+                        <a href="tel:+9530123654896"  >
+                            <span class="lnr lnr-phone m-l-10"></span>
                             <span class="text">
+
                                 <span class="text">+953012 3654 896</span>
                             </span>
                         </a>
@@ -69,7 +71,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href='@Url.Action("Index", "Home")'><img src="~/img/logo.png" alt=""></a>
+                    <a class="navbar-brand logo_h" href='@Url.Action("Index", "Home")'><img src="~/img/logo.png" alt=""  style="width:80px;height:80px"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
@@ -103,6 +105,7 @@
                     <div class="col-lg-6">
                         <div class="banner_content">
                             <h2>
+
                                 vous trouvrez les cours disponibles <br>
                                 sur cette plateforme
                             </h2>
