--- a/projet/Views/Home/about-us.cshtml
+++ b/projet/Views/Home/about-us.cshtml
@@ -64,7 +64,7 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href='@Url.Action("Index", "Home")'><img src="~/img/logo.png" alt=""></a>
+                    <a class="navbar-brand logo_h" href='@Url.Action("Index", "Home")'><img src="~/img/logo.png" style="width:80px;height:80px;" alt=""></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
@@ -103,7 +103,7 @@
                             <p>Bienvenu!!</p>
                             <div class="page_link">
                                 <a href='@Url.Action("Index", "Home")'>Home</a>
-                                <a href="about-us.html">About</a>
+                                <a href='#'>About</a>
                             </div>
                         </div>
                     </div>
