--- a/projet/Views/Modules1/CreateModule.cshtml
+++ b/projet/Views/Modules1/CreateModule.cshtml
@@ -12,7 +12,7 @@
 <link href="css/style-responsive.css" rel="stylesheet">
 <section id="main-content">
     <section class="wrapper">
-        <h3><i class="fa fa-user"></i> Add  a Module</h3>
+        <h3><i class="fa fa-book"></i> Add  a Module</h3>
         <!-- BASIC FORM VALIDATION -->
         <div class="row mt">
             <div class="col-lg-12">
@@ -21,7 +21,7 @@
                     <br />
                     <p class="bg-info" style="margin-left:500px;width:300px;padding-left:40px">@ViewBag.msg</p>
                     <br />
-                    <h4 style="margin-left:600px; color:violet"><i class="fa fa-user-circle"></i> Add  a Module</h4>
+                    <h4 style="margin-left:600px; color:cadetblue"><i class="fa fa-book"></i> Add  a Module</h4>
                
                                 <form role="form" class="form-horizontal style-form" method="post" enctype="multipart/form-data" asp-action="Create">
                                     <div class="form-group has-feedbacks">
@@ -59,7 +59,7 @@
                                
                                     <div class="form-group">
                                         <div class="col-lg-offset-2 col-lg-10">
-                                            <button class="btn btn-theme " id="btnUpload" style="background-color:violet;margin-left:400px; " type="submit">Add  Module </button>
+                                            <button class="btn btn-theme " id="btnUpload" style="background-color:cadetblue;margin-left:400px; " type="submit">Add  Module </button>
                                         </div>
                                     </div>
                                 </form>
