--- a/projet/Views/Shared/_LayoutEnseignant.cshtml
+++ b/projet/Views/Shared/_LayoutEnseignant.cshtml
@@ -36,14 +36,14 @@
     <!-- Page Wrapper -->
     <div id="wrapper">
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <ul class="navbar-nav bg-gradient-info sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Espace Enseignant</div>
+                <div class="sidebar-brand-text mx-3">LEARNEASY</div>
             </a>
             <!-- Divider -->
             <hr class="sidebar-divider my-0">
@@ -52,7 +52,7 @@
                     <i class="fas fa-user-circle"></i>
                     <span>@ViewBag.nom</span>
                     <br>
-                    
+
                     <span style="padding-left:20px;">@ViewBag.prenom</span>
                 </a>
             </li>
@@ -75,7 +75,7 @@
             <!-- Nav Item - Charts -->
             <li class="nav-item">
                 <a class="nav-link" href="@Url.Action("Index1", "Modules")">
-                    <i class="fas fa-fw fa-chart-area"></i>
+                    <i class="fas fa-fw fa-list"></i>
                     <span>Liste des Modules</span>
                 </a>
             </li>
@@ -88,6 +88,13 @@
                 </a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("Logout", "Enseignants")">
+                    <i class="fas fa-fw fa-window-close"></i>
+                    <span>Déconnection</span>
+                    
+                </a>
+            </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
