--- a/projet/Views/Modules/Details.cshtml
+++ b/projet/Views/Modules/Details.cshtml
@@ -15,7 +15,7 @@
 
             <tr>
                 <td>
-                    @Html.DisplayNameFor(model => model.id_mod)
+                    Le numero de module
                 </td>
                 <td>
                     @Html.DisplayFor(model => model.id_mod)
@@ -23,7 +23,7 @@
             </tr>
             <tr>
                 <td>
-                    @Html.DisplayNameFor(model => model.nom_mod)
+                    Le nom de module
                 </td>
                 <td>
                     @Html.DisplayFor(model => model.nom_mod)
