fix cours detais

--- a/projet/Views/Home/Index.cshtml
+++ b/projet/Views/Home/Index.cshtml
@@ -284,9 +284,9 @@
                             </div>
                         </div>
                         <div class="course_content">
-                            <div style="height:160px;width:300px">
+                            <div style="height:100px;width:300px">
                                 <h4>
-                                    <a asp-action="CoursesDetail" asp-route-id="@item.idChapter" style="font-size:15px;"><i class="fa fa-book"></i> @item.typechp</a>
+                                   <i class="fa fa-book"></i> @item.typechp
                                 </h4>
                                 <p>
                                     ce chapitre est publié dans le module @item.nameOfModule
